att-toolkit-salesforce/src/objects/DemoSubscriptionHistory__c.object
<CustomObject>
    <fields>
        <fullName>AuthCode__c</fullName>
        <label>AuthCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerID__c</fullName>
        <label>ConsumerID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MerchantSubscriptionIdList__c</fullName>
        <label>MerchantSubscriptionIdList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MerchantTransactionID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>MerchantTransactionID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refunded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubscriptionDate__c</fullName>
        <label>SubscriptionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SubscriptionId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>SubscriptionId</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DemoSubscriptionHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AuthCode__c</columns>
        <columns>MerchantTransactionID__c</columns>
        <columns>Price__c</columns>
        <columns>Product__c</columns>
        <columns>SubscriptionDate__c</columns>
        <columns>ConsumerID__c</columns>
        <columns>MerchantSubscriptionIdList__c</columns>
        <columns>SubscriptionId__c</columns>
        <columns>Refunded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DemoSubscriptionHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoSubscriptionHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>